# fastapi-kubernetes-example-02

./: .gitignore  README.md  pyproject.toml  skaffold.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml
dockerfiles/: Dockerfile
employee/: api.py  main.py  openapi.py  schemas.py
scripts/: entrypoint.sh  install-tools.sh
tests/: conftest.py  test_clear_employees_endpoint.py  test_create_employee_endpoint.py  test_list_employees_endpoint.py  test_retrieve_employee_endpoint.py
