[tool.poetry]
name = "employee"
version = "0.1.0"
description = "Example FastAPI project"
authors = ["Przemysław Różycki <przemyslaw.rozycki@codecaptains.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
freezegun = "^1.2.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
